[package]
name = "volt"
version = "0.0.1"
authors = [
  "Volt Contributors (https://github.com/voltpkg/volt/graphs/contributors)",
]
description = "A fast, memory-safe package manager for the web."
edition = "2018"
default-run = "volt"

[dependencies]
async-trait = "0.1"
base64 = "0.13.0"
bytes = "1.0.1"
clap = { git = "https://github.com/clap-rs/clap" }
colored = "2.0"
console = "0.14"
dialoguer = "0.8"
dirs = "3.0"
flate2 = "1.0"
futures = "0.3.15"
futures-util = "0.3.15"
git-config = "0.1.4"
indicatif = "0.16"
isahc = '1.4.1'
jwalk = "0.6.0"
lazy_static = "1.4"
miette = "1.1.0"
prettytable-rs = "0.8.0"
rand = "0.8.4"
regex = "1"
reqwest = "0.11.4"
rslint_cli = { path = "src/rslint/cli" }
rslint_config = { path = "src/rslint/config" }
rslint_core = { path = "src/rslint/core" }
rslint_errors = { path = "src/rslint/errors" }
rslint_lexer = { path = "src/rslint/lexer" }
rslint_macros = { path = "src/rslint/macros" }
rslint_parser = { path = "src/rslint/parser" }
rslint_regex = { path = "src/rslint/regex" }
rslint_rowan = { path = "src/rslint/rowan" }
rslint_syntax = { path = "src/rslint/syntax" }
rslint_text_edit = { path = "src/rslint/text_edit" }
semver_rs = "0.1.3"
serde_json = "1.0.64"
serde = { version = "1.0", features = ["derive"] }
sha-1 = "0.9"
sha2 = "0.9.5"
ssri = "6.0.0"
structopt = "0.3"
syntect = "4.5.0"
tar = "0.4"
termimad = "0.16.0"
thiserror = "1.0"
tokio = { version = "1.10.0", features = ["fs", "macros", "rt-multi-thread"] }
walkdir = "2.3.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
  "errhandlingapi",
    "fileapi",
    "guiddef",
    "handleapi",
    "ioapiset",
    "processthreadsapi",
    "securitybaseapi",
    "winbase",
    "winioctl",
    "winnt",
] }
tempfile = "3.2"
scopeguard = "1.1"


[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = 'abort'








