[package]
name = "volt"
version = "0.0.3"
authors = [
  "Tejas Ravishankar <xtremedevx@gmail.com>",
  "Volt Contributors (https://github.com/voltpkg/volt/graphs/contributors)",
]
license = "Apache-2.0"
description = "A fast, memory-safe package manager for the web."
edition = "2021"
default-run = "volt"

[dependencies]
async-trait = "0.1"
base64 = "0.13.0"
bytes = "1.0.1"
clap = { version = "3.0.0-beta.2", features = [
  "std",
  "color",
], default-features = false }
colored = "2.0"
dialoguer = "0.8.0"
dirs = "4.0.0"
flate2 = "1.0"
futures = "0.3.15"
futures-util = "0.3.15"
git-config = "0.1.4"
indicatif = "0.16"
isahc = { version = "1.5.0", features = ["json"] }
jwalk = "0.6.0"
lazy_static = "1.4"
miette = { version = "3.0.1", features = ["fancy"] }
prettytable-rs = "0.8.0"
rand = "0.8.4"
regex = "1.5.4"
reqwest = { version = "0.11.4", features = ["blocking", "json", "rustls-tls", "brotli"], default-features = false }
rslint_cli = "0.3.0"
rslint_config = "0.2.0"
rslint_core = "0.3.0"
rslint_errors = "0.2.0"
rslint_lexer = "0.2.0"
rslint_macros = "0.1.0"
rslint_parser = "0.3.0"
rslint_regex = "0.3.0"
rslint_rowan = "0.10.0"
rslint_syntax = "0.1.4"
rslint_text_edit = "0.1.0"
node-semver = "2.0.0"
cacache = "9.0.0"
semver_rs = "0.1.3"
serde_json = "1.0.64"
serde = { version = "1.0", features = ["derive"] }
sha-1 = "0.9"
sha2 = "0.9.5"
ssri = "7.0.0"
structopt = "0.3"
syntect = "4.5.0"
tar = "0.4"
termimad = "0.16.0"
thiserror = "1.0"
tokio = { version = "1.10.0", features = ["fs", "macros", "rt-multi-thread"] }
minifier = "0.0.41"
fs_extra = "1.2.0"
webbrowser = "0.5.5"
serde_yaml = "0.8.21"
chrono = { version = "0.4.19", features = ["serde"] }
tempfile = "3.2"


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
  "errhandlingapi",
    "fileapi",
    "guiddef",
    "handleapi",
    "ioapiset",
    "processthreadsapi",
    "securitybaseapi",
    "winbase",
    "winioctl",
    "winnt",
] }
scopeguard = "1.1"
cacache = "9.0.0"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = 'abort'
