[package]
name = "volt"
version = "0.0.3"
authors = [
  "Tejas Ravishankar <xtremedevx@gmail.com>",
  "Volt Contributors (https://github.com/voltpkg/volt/graphs/contributors)",
]
license = "Apache-2.0"
description = "A fast, memory-safe package manager for the web."
edition = "2021"
default-run = "volt"

[dependencies]
async-trait = "0.1.51"
base64 = "0.13.0"
bytes = "1.1.0"
clap = { version = "3.0.0-beta.5", features = [
  "std",
  "color",
], default-features = false }
colored = "2.0.0"
dialoguer = "0.9.0"
dirs = "4.0.0"
flate2 = "1.0.22"
futures = "0.3.17"
futures-util = "0.3.17"
git-config = "0.1.7"
indicatif = "0.16.2"
isahc = { version = "1.5.1", features = ["json"] }
jwalk = "0.6.0"
lazy_static = "1.4.0"
miette = { version = "3.2.0", features = ["fancy"] }
rand = "0.8.4"
regex = "1.5.4"
reqwest = { version = "0.11.4", features = [
  "json",
  "rustls-tls",
], default-features = false }
rslint_cli = "0.3.0"
rslint_config = "0.2.0"
rslint_core = "0.3.0"
rslint_errors = "0.2.0"
rslint_lexer = "0.2.0"
rslint_macros = "0.1.0"
rslint_parser = "0.3.1"
rslint_regex = "0.3.0"
rslint_rowan = "0.10.0"
rslint_syntax = "0.1.4"
rslint_text_edit = "0.1.0"
node-semver = "2.0.0"
cacache = "9.0.0"
semver_rs = "0.2.0"
serde_json = "1.0.69"
serde = { version = "1.0.130", features = ["derive"] }
sha-1 = "0.10.0"
sha2 = "0.10.0"
ssri = "7.0.0"
structopt = "0.3.25"
tar = "0.4.37"
thiserror = "1.0.30"
tokio = { version = "1.13.0", features = ["fs", "macros", "rt-multi-thread"] }
minifier = "0.0.41"
fs_extra = "1.2.0"
webbrowser = "0.5.5"
serde_yaml = "0.8.21"
tempfile = "3.2.0"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.1", features = ["env-filter"] }
comfy-table = "5.0.0"
urlencoding = "2.1.0"
lzma-rs = "0.2.0"
lz4_flex = "0.9.2"
speedy = "0.8.0"
libdeflater = "0.7.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [
  "errhandlingapi",
  "fileapi",
  "guiddef",
  "handleapi",
  "ioapiset",
  "processthreadsapi",
  "securitybaseapi",
  "winbase",
  "winioctl",
  "winnt",
] }
scopeguard = "1.1.0"
cacache = "9.0.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
