[package]
name = "volt_check"
version = "0.0.1"
authors = ["Volt Contributors (https://github.com/voltpkg/volt/graphs/contributors)"]
description = "The check command for volt cli."
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
colored = "2.0"
volt_core = { path = "../volt_core" }
volt_utils = {path = "../volt_utils"}