[package]
name = "volt_unknown"
version = "0.0.1"
authors = ["Volt Contributors (https://github.com/voltpkg/volt/graphs/contributors)"]
description = "The unknown command for volt cli."
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
volt_core = { path = "../volt_core" }
colored = "2.0.0"