[package]
name = "volt_watch"
version = "0.0.1"
authors = ["Volt Contributors (https://github.com/voltpkg/volt/graphs/contributors)"]
description = "The watch command for volt cli."
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
regex = "1"
volt_core = { path = "../volt_core" }
colored = "2.0.0"
dialoguer = "0.8.0"
indicatif = "0.16.2"
volt_utils = { path="../volt_utils" }
volt_add = { path = "../volt_add" }
walkdir = "2.3.2"
rslint_core = { path = "../rslint_core" }
rslint_config = { path = "../rslint_config" }
rslint_cli = { path = "../rslint_cli" }
rslint_parser = { path = "../rslint_parser" }
serde_json = "1.0.64"