[package]
name = "bincode-server"
version = "0.1.0"
authors = ["Tejas Ravishankar <xtremedevx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
bincode = "1.3.3"
base64 = "0.13.0"
lz4 = "1.23.2"
