[package]
name = "compress"
version = "0.1.0"
authors = ["XtremeDevX <xtremedevx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifier = "0.0.41"
walkdir = "2.3.2"
indicatif = "0.16.1"
zstd = "0.8.1+zstd.1.5.0"
tar = "0.4.33"
flate2 = "1.0.20"
macro-utils = "^0.1"