[package]
name = "compress"
version = "0.1.0"
authors = ["XtremeDevX <xtremedevx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = { version = "2.3.2" }
indicatif = "0.16.1"
tar = "0.4.33"
flate2 = "1.0.20"
byte-unit = "4.0.12"