[package]
name = "create"
version = "0.0.1"
authors = ["Volt Contributors (https://github.com/voltpkg/volt/graphs/contributors)"]
description = "The create command for volt cli."
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
colored = "2.0"
dialoguer = "0.8"
smol = "1.2.5"
volt_core = { path = "../volt_core" }
init = { path = "../init" }
flate2 = "1.0"
tar = "0.4"
utils = { path="../utils" }