[package]
name = "create"
version = "0.0.1"
authors = [
    "Volt Contributors (https://github.com/voltpkg/volt/graphs/contributors)",
]
description = "The create command for volt cli."
edition = "2018"

[dependencies]
async-trait = "0.1"
colored = "2.0"
dialoguer = "0.8"
volt_core = { path = "../volt_core" }
init = { path = "../init" }
flate2 = "1.0"
tar = "0.4"
utils = { path = "../utils" }
miette = "1.0.1"
tokio = { version = "1.9.0", features = ["fs"] }
