[package]
name = "install"
version = "0.0.1"
authors = ["Volt Contributors (https://github.com/voltpkg/volt/graphs/contributors)"]
description = "The install command for volt cli."
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
colored = "2.0"
add = { path = "../add" }
volt_core = { path = "../volt_core" }
utils = { path = "../utils" }