[package]
name = "list"
version = "0.1.0"
authors = ["Volt Contributors (https://github.com/voltpkg/volt/contributors)"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
colored = "2.0"
volt_core = { path = "../volt_core" }
walkdir = "2.3"
utils = { path = "../utils" }