[package]
name = "remove"
version = "0.0.1"
authors = [
    "Volt Contributors (https://github.com/voltpkg/volt/graphs/contributors)",
]
description = "The remove command for volt cli."
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
colored = "2.0"
volt_core = { path = "../volt_core" }
init = { path = "../init" }
utils = { path = "../utils" }
tokio = "1.9.0"
