[package]
name = "scripts"
version = "0.0.1"
authors = [
    "Volt Contributors (https://github.com/voltpkg/volt/graphs/contributors)",
]
description = "The unknown command for volt cli."
edition = "2018"

[dependencies]
colored = "2.0.0"
miette = "1.0.1"
async-trait = "0.1.51"
utils = { path = "../utils" }
volt_core = { path = "../volt_core" }
