[package]
name = "search"
version = "0.0.1"
authors = [
    "Volt Contributors (https://github.com/voltpkg/volt/graphs/contributors)",
]
description = "The search command for volt cli."
edition = "2018"

[dependencies]
async-trait = "0.1"
volt_core = { path = "../volt_core" }
colored = "2.0.0"
utils = { path = "../utils" }
prettytable-rs = "^0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
isahc = "1.4.1"
miette = "1.0.1"
